# symposion_2019

./: .env  Cargo.toml  Makefile  README.md  Rocket.toml  Web.toml  build.rs  index.css  index.html  m.html  micromodal.css  pass.sqlite  passwd.sqlite  run  twinkle.css
conf/: index.html  index.md
migrations/2019-10-14-165018_create_users/: up.sql
passwd/: Pass.toml
pkg/: README.md  package.json  symposion_2019.d.ts  symposion_2019.js  symposion_2019_bg.d.ts  symposion_2019_bg.wasm
pkg/snippets/symposion_2019-6093c590e97c9c63/: inline38.js  inline45.js
src/: admin.rs  db.rs  harmonogram.rs  lib.rs  login.rs  main.rs  static_server.rs  wasm.rs
src/auth/: admin.rs  login.rs  mod.rs
static/: facebook.png~  git.png~  kepler.png~
style/: index.css  login.css  micromodal.css  roadrunner.css  twinkle.css
style/m/: index.css  micromodal.css
www/: 404.html  index.html  login.html
