[package]
name = "symposion_2019"
version = "0.1.0"
authors = ["Dawid J. Kubis <dawid.kubis3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["diesel_sqlite_pool"]

