[package]
name = "symposion_2019"
version = "0.69.0"
authors = ["Dawid J. Kubis <dawid.kubis3@gmail.com>", "Lukáš Hozda <luk.hozda@gmail.com>"]
edition = "2018"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backend = ["rocket", "diesel", "rocket_contrib"]
frontend = ["smithy", "wasm-bindgen", "web-sys", "wee_alloc", "wasm-bindgen-futures", "executor"]

[dependencies]
rocket = { version = "0.4.2", optional = true }
diesel = { version = "1.4.3", features = ["sqlite"], optional = true }
wasm-bindgen = { version = "0.2.48", features = ["nightly", "serde-serialize"], optional = true }
wasm-bindgen-futures = { version = "0.4.1", optional = true }
js-sys = { version = "0.3.28", optional = true }
serde_json = "*"
serde = { version = "*", features = ["derive"] }
serde_derive = "*"
smithy = { version = "0.0.7", features = [
  "mouse-events",
  "input-events",
], optional = true }
web-sys = { version = "0.3.22", features = [
  "console",
  "Element",
  "Window",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Location",
], optional = true }
wee_alloc = { version = "0.4.2", optional = true }
reqwest = { version = "0.9.22", optional = true }
executor = { version = "0.0.5", optional = true  }

[dependencies.rocket_contrib]
version = "0.4.2"
optional = true
default-features = false
features = ["diesel_sqlite_pool"]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

